testsuite/gsksl/errors/redeclaration-of-global-variable-in-anonymous-block.glsl
int x;
uniform Block {
  int x;
};

void
main ()
{
}
